# workerd-cxx

./: .bazelrc  .gitignore  AGENTS.md  BUILD.bazel  MODULE.bazel  README.md  capnp_cpp.bzl  justfile  kj_rs.bzl
.github/workflows/: ci.yml
.helix/: languages.toml
book/: package-lock.json
include/: cxx.h
kj-rs/: BUILD.bazel  DESIGN-runtime.md  awaiter.c++  awaiter.h  awaiter.h.rs  awaiter.rs  convert.h  future.h  kj-rs.h  lazy_pin_init.rs  lib.rs  linked-group.h  maybe.rs  oneof.rs  own.c++  own.h  own.rs  promise.rs  rc.rs  refcount.rs  runtime.c++  runtime.h  runtime.rs  waker.h  waker.rs
kj-rs/io/: BUILD.bazel  bridge.c++  bridge.h  ffi.rs  impl.rs  interface.rs  lib.rs  tests.c++  tests.h  tests.rs
kj-rs/tests/: BUILD.bazel  async-stream-test.c++  async_stream.rs  awaitables-cc-test.c++  cxx-types.c++  cxx-types.h  lib.rs  linked-group-test.c++  test-maybe.c++  test-maybe.h  test-oneof.c++  test-oneof.h  test-own.c++  test-own.h  test-promises.c++  test-promises.h  test-rc.c++  test-rc.h  test-refcount.c++  test-refcount.h  test_awaitables.rs  test_date.rs  test_futures.rs  test_maybe.rs  test_oneof.rs  test_own.rs  test_rc.rs  test_refcount.rs
macro/src/: expand.rs  generics.rs  lib.rs
src/: cxx.cc  cxx_vector.rs  kj_rs.rs  lib.rs  result.rs  unique_ptr.rs  unwind.rs
syntax/: check.rs  impls.rs  improper.rs  instantiate.rs  map.rs  mod.rs  namespace.rs  parse.rs  pod.rs  resolve.rs  set.rs  tokens.rs  trivial.rs  types.rs  visit.rs
tests/: BUILD.bazel  cxx_gen.rs  nonnull.rs  nonnull_tests.cc  nonnull_tests.h  test.rs
tests/ffi/: build.rs  lib.rs  tests.cc  tests.h
tests/kj-rs/: BUILD.bazel  cxx-types.cc  cxx-types.h  lib.rs  tests.cc  tests.h  types.rs
tools/bazel/: BUILD.bazel
