module(
    name = "workerd-cxx",
    version = "0.0.0",
    bazel_compatibility = [">=7.2.1"],
    compatibility_level = 1,
)

bazel_dep(name = "bazel_features", version = "1.42.1")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "apple_support", version = "2.1.0")
bazel_dep(name = "rules_rs", version = "0.0.40")
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")

cc_configure = use_extension("@rules_cc//cc:extensions.bzl", "cc_configure_extension")
use_repo(cc_configure, "local_config_cc")

rules_rust = use_extension("@rules_rs//rs/experimental:rules_rust.bzl", "rules_rust")
use_repo(rules_rust, "rules_rust")

rust = use_extension("@rules_rs//rs/experimental:rules_rust_reexported_extensions.bzl", "rust")

# new versions of stable rust can't be linked with C++ binaries:
# <https://github.com/bazelbuild/rules_rust/issues/3459>
rust.toolchain(versions = ["nightly/2025-09-18"])
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

crate = use_extension("@rules_rs//rs:extensions.bzl", "crate")
crate.from_cargo(
    name = "crates.io",
    cargo_lock = "//third-party:Cargo.lock",
    cargo_toml = "//third-party:Cargo.toml",
    platform_triples = [
        "x86_64-apple-darwin",
        "aarch64-apple-darwin",
        "x86_64-unknown-linux-gnu",
        "aarch64-unknown-linux-gnu",
        "x86_64-pc-windows-msvc",
    ],
)
use_repo(crate, "crates.io")

## KJ-RS

capnp_cpp = use_extension("//:capnp_cpp.bzl", "capnp_cpp")
use_repo(capnp_cpp, "capnp-cpp")

bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "abb61a688167623088f8768cc9264798df6a9d10",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)
