load("//tools/bazel:rust_cxx_bridge.bzl", "rust_cxx_bridge")
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_cxx_bridge(
    name = "bridge",
    src = "lib.rs",
    hdrs = ["bridge.h"],
    include_prefix = "kj-rs/io", 
    deps = [
        "//kj-rs",
        "@capnp-cpp//src/kj:kj",
        "@capnp-cpp//src/kj:kj-async",
        "@workerd-cxx//:cxx",
    ],
)

cc_library(
    name = "bridge_cpp",
    srcs = ["bridge.c++"],
    hdrs = ["bridge.h"],
    include_prefix = "kj-rs/io",
    deps = [
        ":bridge/include",
        "@capnp-cpp//src/kj:kj",
        "@capnp-cpp//src/kj:kj-async",
    ],
)

rust_library(
    name = "io",
    srcs = ["lib.rs"],
    edition = "2024",
    visibility = ["//visibility:public"],
    deps = [
        ":bridge_cpp",
        "//kj-rs",
        "@crates.io//:futures",
        "@workerd-cxx//:cxx",
    ],
)

rust_test(
    name = "io_test",
    crate = ":io",
    edition = "2024",
)

rust_cxx_bridge(
    name = "tests_bridge",
    src = "tests.rs",
    hdrs = ["tests.h"],
    include_prefix = "kj-rs/io",
    deps = [
        ":bridge_cpp",
        ":io",
        "@capnp-cpp//src/kj:kj",
        "@capnp-cpp//src/kj:kj-async",
        "@workerd-cxx//:cxx",
    ],
)

rust_library(
    name = "io_tests",
    srcs = ["tests.rs"],
    edition = "2024",
    visibility = ["//visibility:public"],
    deps = [
        ":io",
        ":tests_bridge",
        "//kj-rs",
        "@crates.io//:futures",
        "@workerd-cxx//:cxx",
    ],
)

rust_test(
    name = "io_tests_test",
    crate = ":io_tests",
    edition = "2024",
)

cc_test(
    name = "io_cpp_tests",
    size = "medium",
    srcs = ["tests.c++", "tests.h"],
    deps = [
        ":bridge",
        ":bridge_cpp",
        ":bridge/include",
        ":io_tests",
        ":tests_bridge",
        ":io",
        "@capnp-cpp//src/kj:kj",
        "@capnp-cpp//src/kj:kj-async",
        "@capnp-cpp//src/kj:kj-test",
        "@workerd-cxx//:cxx",
    ],
    linkstatic = True,
)
