load("@rules_rust//rust:defs.bzl", "rust_test")
load("//tools/bazel:rust_cxx_bridge.bzl", "rust_cxx_bridge")

rust_test(
    name = "test",
    size = "small",
    srcs = glob(["*.rs"]),
    edition = "2021",
    deps = [
        ":bridge",
        ":tests",
        ":types",
        "//:cxx",
        "//kj-rs",
    ],
)

rust_cxx_bridge(
    name = "bridge",
    testonly = True,
    src = "lib.rs",
    hdrs = ["tests.h", "cxx-types.h"],
    deps = [
        "//kj-rs",
    ],
)

rust_cxx_bridge(
    name = "types",
    testonly = True,
    src = "types.rs",
    hdrs = ["tests.h", "cxx-types.h"],
    deps = [
        "//kj-rs",
        "@capnp-cpp//src/kj:kj-async",
    ],
)

cc_library(
    name = "tests",
    testonly = True,
    srcs = [
        "tests.cc",
        "cxx-types.cc"
    ],
    hdrs = ["tests.h", "cxx-types.h", "lib.rs.h"],
    deps = [
        "@capnp-cpp//src/kj:kj-async",
        ":bridge",
    ],
)
